orders.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders
  labels:
    app: orders
spec:
  replicas: 2
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
      - name: orders
        image: 656701891231.dkr.ecr.us-east-1.amazonaws.com/orders:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: orders-svc
  labels:
    app: orders
spec:
  selector:
    app: orders
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
